<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.onlineshop_castanheirofreno.ItemsActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/title_home"
        android:actionLayout="@layout/activity_main"/>
    <item
        android:id="@+id/action_category"
        android:orderInCategory="2"
        android:title="@string/title_category"
        android:actionLayout="@layout/category_list"/>
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="3"
        android:title="@string/title_cart"
        android:actionLayout="@layout/cart"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/title_settings"/>

</menu>
