<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDescriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orangeBackground">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="247dp"
        android:layout_height="178dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        android:src="@drawable/acer_aspire_5_599"/>

    </LinearLayout>

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/productname"
        android:textSize="@dimen/basicTextSize"
        android:textStyle="bold"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/price"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_add_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:onClick="seeShoppingCart"
        android:text="@string/add_to_the_cart"/>

    <TextView
        android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/product_description"
        android:textSize="12sp"/>




</LinearLayout>

