<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.confirmation.ConfirmationActivity">


    <TextView
        android:id="@+id/thanks_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:textColor="@color/colorText"
        android:text="@string/confirmation_message1"
        android:textSize="@dimen/smallTextSize"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/confirmation_message2"
        android:textColor="@color/colorText"
        android:textSize="@dimen/smallTextSize"/>

    <Button
        android:id="@+id/btn_go"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorText"
        android:text="@string/go_shopping_button"
        android:textSize="@dimen/btnTextSize"
        android:onClick="goShopping"/>


</LinearLayout>