<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.onlineshop_castanheirofreno.ui.item.AddItemActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<ImageButton
                android:id="@+id/imagebtn_addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_add_a_photo_blue_24dp" />-->

            <TextView
                android:id="@+id/textView_productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/productname"
                android:textSize="@dimen/basicTextSize"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_product_name"
                android:inputType="text"
                android:textColor="@color/colorHint"/>

            <TextView
                android:id="@+id/textView_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/price"
                android:inputType="numberDecimal"
                android:textSize="@dimen/basicTextSize"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>

            <EditText
                android:id="@+id/input_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_price"
                android:inputType="number"
                android:textColor="@color/colorHint"/>

            <TextView
                android:id="@+id/textView_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorText"
                android:text="@string/text_view_quantity"
                android:textSize="@dimen/basicTextSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:textColor="@color/colorHint"/>

            <TextView
                android:id="@+id/textView_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/category_name"
                android:textSize="@dimen/basicTextSize"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorHint"/>

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_view_description"
                android:textSize="@dimen/basicTextSize"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                android:textColor="@color/colorHint"/>

            <Button
                android:id="@+id/btn_add_new_product"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_new_product"
                android:textSize="@dimen/basicTextSize"/>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>